--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   </head> 
 
   <body>
-    <div id="header">
+    <header>
         <img id="headerLogo" src="images/headerLogo.gif" alt="Starbuzz Coffee logo image">  
         <img id="headerSlogan" src="images/headerSlogan.gif" alt="Providing all the caffeine you need to power your life."> 
-    </div>
+    </header>
     <div id="table">
       <div id="row">
-        <div id="drinks">  
+        <section id="drinks">  
           <h1>BEVERAGES</h1>
           <p>House Blend, $1.49</p>    
           <p>Mocha Cafe Latte, $2.35</p>    
@@ -27,8 +27,8 @@
           <p>Cranberry Antioxidant Blast, $2.99</p>    
           <p>Chai Chiller, $2.99</p>    
           <p>Black Brain Brew, $2.99</p> 
-        </div>
-        <div id="main">
+        </section>
+        <SECTION id="main">
           <h1>QUALITY COFFEE, QUALITY CAFFEINE</h1>
           <p>
             At Starbuzz Coffee, we are dedicated to filling all your  caffeine needs through our 
@@ -73,8 +73,8 @@
             <a href="form.html">Bean Machine</a>, and take
             the Starbuzz Coffee experience home.
           </p>
-        </div>
-        <div id="sidebar">
+        </SECTION>
+        <aside> 
           <p class="beanheading">
             <img src="images/bag.gif" alt="Bean Machine bag">
             <br>
@@ -94,15 +94,15 @@
             enter your order, and behind the scenes, your coffee is roasted, ground 
             (if you want), packaged, and shipped to your door.
           </p>
-        </div>
+        </aside>
       </div>
     </div>
-    <div id="footer">
-      &copy; 2012, Starbuzz Coffee
-      <br>
-      All trademarks and registered trademarks appearing on 
-      this site are the property of their respective owners.
-    </div>
+    <footer>
+          &copy; 2012, Starbuzz Coffee
+          <br>
+          All trademarks and registered trademarks appearing on 
+          this site are the property of their respective owners.
+    </footer>
   </body>
 </html>
 
