--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,13 @@
       <img id="headerSlogan"
           src="images/headerSlogan.gif" alt="Providing all the caffeine you need to power your life.">
     </header>
-
+    <ul>
+    	<li><a href="index.html">HOME</a></li>
+    	<li class="selected"><a href="blog.html">BLOG</a></li>
+    	<li><a href="">INVENTIONS</a></li>
+    	<li><a href="">RECIPES</a></li>
+    	<li><a href="">LOCATIONS</a></li>
+    </ul>
 	<div id="table">
 	<div id="row">
 
