--- a/form.html
+++ b/form.html
@@ -9,6 +9,7 @@
     <h1>The Starbuzz Bean Machine</h1>
     <h2>Fill out the form below and click submit to order</h2>
     <form action="http://starbuzzcoffee.com/processorder.php" method="POST">
+    	
     	<p>
     		Choose your beans:
     		<select name="beans"> 
@@ -19,6 +20,18 @@
     		</select>
     	</p>
     	<p>
+    		Type:<br>
+    		<input type="radio" name="beantype" value="whole"> Whole bean <br>
+    		<input type="radio" name="beantype"	 checked value="ground"> Ground
+    	</p>
+    	<p>
+    		Extras:<br>
+    		<input type="checkbox" name="extras[]" value="giftwrap"> Gift wrap<br>
+    		<input type="checkbox" name="extras[]" checked value="catalog">Include catalog with order
+    	</p>
+    	<p>Number of bags: <input type="number" name="bags" min="1" max="10"></p>
+    	<p>Must arrive date: <input type="date" name="date"></p>
+    	<p>
     		Ship to:<br>
     		Name:<input type="text" name="name"><br>
     		Address:<input type="text" name="address"><br>
@@ -26,6 +39,10 @@
     		State:<input type="text" name="state"><br>
     		Zip:<input type="text" name="zip"><br>
     		Phone:<input type="tel" name="phone"><br>
+     	</p>
+     	<p>
+     		Customer Comments:<br>
+     		<textarea name="comments"></textarea>
      	</p>
      	<p>
      		<input type="submit" name="Order Now">
