My personal modifications to starbuzz site

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
         <img id="headerLogo" src="images/headerLogo.gif" alt="Starbuzz Coffee logo image">  
         <img id="headerSlogan" src="images/headerSlogan.gif" alt="Providing all the caffeine you need to power your life."> 
     </header>
+    <nav>
+      <ul>
+          <li class="selected"><a href="index.html">HOME</a></li>
+          <li><a href="blog.html">BLOG</a></li>
+          <li><a href="">INVENTIONS</a></li>
+          <li><a href="">RECIPES</a></li>
+          <li><a href="">LOCATIONS</a></li>
+        </ul>
+    </nav>
     <div id="table">
       <div id="row">
         <section id="drinks">  
@@ -70,7 +79,7 @@
           <p>
             We also offer a variety of coffee beans, whole or ground, for you to
             take home with you.  Order your coffee today using our online
-            <a href="form.html">Bean Machine</a>, and take
+            <a href="styledform.html">Bean Machine</a>, and take
             the Starbuzz Coffee experience home.
           </p>
         </SECTION>
@@ -80,7 +89,7 @@
             <br>
             ORDER ONLINE
             with the 
-            <a href="form.html">BEAN MACHINE</a>
+            <a href="styledform.html">BEAN MACHINE</a>
             <br>
             <span class="slogan">
                 FAST <br>
