--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
           <li><a href="">LOCATIONS</a></li>
         </ul>
     </nav>
-    <div id="table">
-      <div id="row">
+    <div id = "flex-container">
         <section id="drinks">  
           <h1>BEVERAGES</h1>
           <p>House Blend, $1.49</p>    
@@ -37,7 +36,7 @@
           <p>Chai Chiller, $2.99</p>    
           <p>Black Brain Brew, $2.99</p> 
         </section>
-        <SECTION id="main">
+        <section id="main">
           <h1>QUALITY COFFEE, QUALITY CAFFEINE</h1>
           <p>
             At Starbuzz Coffee, we are dedicated to filling all your  caffeine needs through our 
@@ -82,7 +81,7 @@
             <a href="styledform.html">Bean Machine</a>, and take
             the Starbuzz Coffee experience home.
           </p>
-        </SECTION>
+        </section>
         <aside> 
           <p class="beanheading">
             <img src="images/bag.gif" alt="Bean Machine bag">
@@ -104,7 +103,6 @@
             (if you want), packaged, and shipped to your door.
           </p>
         </aside>
-      </div>
     </div>
     <footer>
           &copy; 2012, Starbuzz Coffee
